2016-06-20  Ørjan Malde  <foxyred333@gmail.com>

	* config.sub (-midipix*): New.
	* testsuite/config-sub.data: Add test.

2016-06-14  Jerome Lambourg  <lambourg@adacore.com>

	* config.sub (e500v[12], e500v[12]-*): Decode basic machine as a
	powerpc alias, and add an "spe" suffix to the OS for e500v1|2 ABI
	selection.
	* testsuite/config-sub.data: Add tests for e500v[12]-elf,
	e500v2-wrs-vxworks, e500v2-vxworksae and e500v2-wrs-linux.

2016-05-15  Ben Elliston  <bje@gnu.org>

	* config.guess: Improve help when a system is not recognised.

2016-05-13  Nick Hudson  <skrll@netbsd.org>

	* config.guess (*:NetBSD:*:*): Always use "netbsdelf" for earm.

2016-05-10  Jakub Sejdak  <jakub.sejdak@phoesys.com>

	* config.sub (-phoenix*): New.
	* testsuite/config-sub.data: Add a test case.

2016-04-02  Ben Elliston  <bje@gnu.org>

	Silence warning SC2021 from shellcheck.
	* config.guess (*:GNU/*:*:*): Use [:upper:] and [:lower:] classes
	instead of [A-Z] and [a-z]. Putting [] around character ranges in
	tr is a mistake anyway, as it includes square brackets in the
	translation.

2016-04-02  Ben Elliston  <bje@gnu.org>

	Silence warning SC2116 from shellcheck.
	* config.guess (i*86:skyos:*:*): Fix misplaced backquote.

2016-04-02  Ben Elliston  <bje@gnu.org>

	Silence warning SC1007 from shellcheck.
	* config.guess: Explicitly set CCOPTS to "" not the empty string.

2016-03-30  Mike Hommey  <mh+mozilla@glandium.org>
	    Ben Elliston  <bje@gnu.org>

	* config.sub (-ios): New.
	* testsuite/config-sub.data: Add a test case (and sort).

2016-03-24  Luis Kornblueh  <luis.kornblueh@mpimet.mpg.de>

	* config.guess (SX-ACE:SUPER-UX:*:*): New.
	* testsuite/config-guess.data: Add a test case.

2016-02-11  Ben Elliston  <bje@gnu.org>

	* config.guess: Simplify shell code by removing quotes around
	fixed strings that contain no expansions.

2016-02-11  Urs Janßen  <urs@tin.org>

	* config.guess (*:LibertyBSD:*:*): Fix sed expression.

2016-02-03  Riley Baird  <riley@openmailbox.org>
